--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,17 +8,67 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" >
   <meta name="viewport" content="width=device-width, initial-scale=1.0" >
 
+  <!-- CSS -->
   <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" />
   <link rel="stylesheet" href="/vendor/border-box.css" />
   <link rel="stylesheet" href="/styles/main.css" />
   <link rel="stylesheet" href="/styles/layout.css" />
 
+  <!-- JS -->
   <script src="/vendor/jquery-3.0.0.js"></script>
   <script defer src="/scripts/app.js"></script>
 </head>
 
 <body>
-  <h1>Have fun! 🥔</h1>
-</body>
 
+  <header>
+    <!-- Navigation at top starts here -->
+    <div class="navBarContainer">
+      <p>navigation</p>
+      <div class="navlogo">
+        <p>navigation logo</p>
+      </div>
+      <div class="navMenu">
+        <p>navigation menu</p>
+      </div>
+    </div>
+    <!-- Navigation ends here -->
+    <!-- Banner starts here -->
+    <div class="bannerContainer">
+      <div class="bannerTxt">
+        <h1>Welcome to Fruit Cart!</h1>
+      </div>
+      <div class="bannerImg">
+        <img src="https://dodo.ac/np/images/9/92/Fruit_Basket_NH_Icon.png" alt="Basket of Fruit">
+      </div>
+    </div>
+    <!-- Banner ends here -->
+  </header>
+
+  <main>
+    <section class="fruit-grid">
+      <% for (let fruit of fruits) { %>
+        <div class="fruit">
+        <p class="fruit-header">
+          <img src="<%= fruit.fruit_picture_url %>" alt="fruits"/>
+          <h3 class="fruitName"><%= fruit.name %></h3>
+        </p>
+        <div class="price-container">
+          <p class="fruitPrice">$<%= fruit.price %></p>
+        </div>
+        <p class="fruitDescription"><%= fruit.description %></p>
+        <div class="button-container">
+          <button class="moreInfo">More info</button>
+          <button class="addToCart">Add to cart</button>
+          <button class="addToCart">Favourite</button>
+        </div>
+        </div>
+        <% } %>
+    </section>
+  </main>
+
+  <footer>
+    <p>footer</p>
+  </footer>
+</body>
 </html>
