Fixed the issue of favourites

--- a/views/favourites.ejs
+++ b/views/favourites.ejs
@@ -34,7 +34,7 @@
           <div class="productImage">
             <img src="https://dodo.ac/np/images/9/92/Fruit_Basket_NH_Icon.png" alt="fruits">
           </div>
-          <h3 class="productName"><%= fruit.name %></h3>
+          <h3 class="productName"><%= fruit.fruit_name %></h3>
           <div class="priceContainer">
             <p class="price">$<%= fruit.price %></p>
           </div>
