--- a/views/shopping_list.ejs
+++ b/views/shopping_list.ejs
@@ -8,39 +8,44 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" >
   <meta name="viewport" content="width=device-width, initial-scale=1.0" >
 
-<!-- stylesheets -->
-<link rel='stylesheet' type='text/css' media='screen' href='styles/main.css'>
-<link rel='stylesheet' type='text/css' media='screen' href='styles/index.css'>
-<link rel='stylesheet' type='text/css' media='screen' href='styles/nav.css'>
+  <!-- Fonts and Icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-<!-- scripts -->
-<script src="/vendor/jquery-3.0.0.js"></script>
-<!-- Fonts and Icons -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <!-- stylesheets -->
+  <link rel='stylesheet' type='text/css' media='screen' href='styles/main.css'>
+  <link rel='stylesheet' type='text/css' media='screen' href='styles/index.css'>
+  <link rel='stylesheet' type='text/css' media='screen' href='styles/nav.css'>
+  <link rel='stylesheet' type='text/css' media='screen' href='styles/shopping_list.css'>
+
+  <!-- scripts -->
+  <script src="/vendor/jquery-3.0.0.js"></script>
 
 </head>
 
 <body>
   <main>
     <div class="mainContainer">
-      <h1>Shopping List</h1>
+      <div class="shoppingCartHeader">
+        <h1 class="cartHeading">Shopping Cart</h1>
+        <h3 class="removeAll">Remove all</h3>
+      </div>
 
-      <section class="fruitsSection">
-        <div class="fruitContainer">
+      <section class="shoppingCartSection">
+        <div class="shoppingCartContainer">
         <% for (let fruit of fruits) { %>
-            <div class="product">
-              <div class="buttonContainer">
+            <div class="cartItem">
+              <!-- <div class="buttonContainer">
                 <i class="fa-solid fa-circle-info"></i>
                 <i class="fa-solid fa-heart-circle-plus"></i>
-              </div>
-              <div class="productImage">
+              </div> -->
+              <div class="imageBox">
                 <img src="https://dodo.ac/np/images/9/92/Fruit_Basket_NH_Icon.png" alt="fruits">
               </div>
               <h3 class="productName"><%= fruit.fruit_name %></h3>
               <div class="priceContainer">
                 <p class="price">$<%= fruit.price %></p>
               </div>
-              <button class="addToCart">Add to cart</button>
+              <button class="removeItem">Remove</button>
             </div>
           <% } %>
         </div>
