Updated sell page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -40,7 +40,9 @@
           <option>My Fruit</option>
         </select>
 
+        <a href="/sell">
         <button class="sellFruit">Sell Fruit</button>
+        </a>
 
       </section>
     <section class="fruitsSection">
