--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -8,14 +8,22 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" >
   <meta name="viewport" content="width=device-width, initial-scale=1.0" >
 
-<!-- CSS Frameworks-->
-<link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
-
-<!-- stylesheets -->
-<link rel='stylesheet' type='text/css' media='screen' href='styles/main.css'>
-<link rel='stylesheet' type='text/css' media='screen' href='styles/index.css'>
-<link rel='stylesheet' type='text/css' media='screen' href='styles/nav.css'>
-<link rel='stylesheet' type='text/css' media='screen' href='styles/sell.css'>
+<!-- tailwind elements plugin -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" />
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tw-elements/dist/css/index.min.css" />
+<script src="https://cdn.tailwindcss.com"></script>
+<script>
+  tailwind.config = {
+    theme: {
+      extend: {
+        fontFamily: {
+          sans: ['Inter', 'sans-serif'],
+        },
+      }
+    }
+  }
+</script>
 
 <!-- scripts -->
 <script src="/vendor/jquery-3.0.0.js"></script>
@@ -25,47 +33,86 @@
 </head>
 
 <body>
-  <main>
-    <div class="mainContainer">
-      <h1>Contact Seller</h1>
-    <div class="w-full max-w-xl contactContainer">
-      <form class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4" method="POST" action="https://mailthis.to/fruitcartapplication@gmail.com">
+      <!-- navbar -->
+      <%- include('partials/_header') %>
 
-        <div class="flex flex-wrap -mx-3 mb-6">
-          <div class="w-full px-3 mb-6 md:mb-0">
-            <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="fruit-name">
+  <section class="h-screen">
+    <div class="px-6 h-full text-gray-800">
+      <div
+        class="flex xl:justify-between lg:justify-between justify-between items-center flex-wrap h-full g-6"
+      >
+
+        <div class="xl:ml-20 xl:w-5/12 lg:w-5/12 md:w-8/12 mb-12 md:mb-0">
+          <form method="POST" action="https://mailthis.to/fruitcartapplication@gmail.com">
+
+            <div
+              class="flex items-center my-4 before:flex-1 before:border-t before:border-gray-300 before:mt-0.5 after:flex-1 after:border-t after:border-gray-300 after:mt-0.5"
+            >
+              <p class="text-center font-semibold mx-4 mb-0">CONTACT SELLER</p>
+            </div>
+
+            <!-- Customer Name Input -->
+          <div class="mb-6">
+            <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="customer-name">
               Your Name
             </label>
-            <input class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 leading-tight focus:outline-none focus:bg-white focus:border-gray-500" name="name" id="customer-name" type="text" placeholder="Jane Doe">
+            <input
+              type="text"
+              class="form-control block w-full px-4 py-2 text-xl font-normal text-gray-700 bg-white bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-none"
+              id="exampleFormControlInput2"
+              placeholder="Jane Doe"
+              name="name" id="customer-name" type="text"
+            />
           </div>
-        </div>
-
-        <div class="flex flex-wrap -mx-3 mb-6">
-          <div class="w-full px-3">
-            <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="fruit-price">
+          <!-- Email input -->
+          <div class="mb-6">
+            <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="customer-email">
               Your Email
             </label>
-            <input class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 leading-tight focus:outline-none focus:bg-white focus:border-gray-500" name="email" id="customer-email" type="text" placeholder="janedoe@fruitmail.com">
+            <input
+              type="text"
+              class="form-control block w-full px-4 py-2 text-xl font-normal text-gray-700 bg-white bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-none"
+              id="exampleFormControlInput2"
+              placeholder="email@fruitmail.com"
+              name="email" id="customer-email" type="text"
+            />
           </div>
-        </div>
 
-        <div class="flex flex-wrap -mx-3 mb-6">
-          <div class="w-full px-3">
-            <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="fruit-image-url">
+          <!-- Message input -->
+
+          <div class="mb-6">
+            <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="customer-email">
               Message
             </label>
-            <textarea class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-gray-500" name="message"id="customer-message" type="text" placeholder="What would you like to say?" rows="5"></textarea>
+            <textarea
+              type="text"
+              class="form-control block w-full px-4 py-2 text-xl font-normal text-gray-700 bg-white bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-none"
+              id="exampleFormControlInput2"
+              placeholder="What would you like to say?"
+              name="message"id="customer-message" type="text" placeholder="What would you like to say?"></textarea>
           </div>
-        </div>
-
-        <div class="flex items-center justify-between">
-          <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" type="submit">
-            Submit
-          </button>
-        </div>
+<!-- submit button -->
+          <div class="flex items-center justify-between">
+            <button class="bg-red-500 hover:bg-red-800 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" type="submit">
+              Submit
+            </button>
+          </div>
       </form>
     </div>
+
+    <div
+    class="grow-0 shrink-1 md:shrink-0 basis-auto xl:w-6/12 lg:w-6/12 md:w-9/12 mb-12 md:mb-0"
+  >
+    <img
+      src="https://images.unsplash.com/photo-1595475207225-428b62bda831?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=880&q=80"
+      class="w-full rounded-3xl"
+      alt="Sample image"
+    />
+  </div>
+
     </div>
+    </div>
+    </section>
   </main>
 
 </body>
