--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -7,8 +7,12 @@
       <a class="text-3xl font-bold cursor-pointer" herf="/">LOGO</a>
       <!-- login -->
       <div class="login">
+        <a class="inline-block ml-auto mr-3 py-2 px-6 bg-gray-200 hover:bg-blue-300 text-lg text-gray font-bold rounded-xl transition duration-200 ease-in-out" href="/favourites">Favourites</a>
+        <a class="inline-block ml-auto mr-3 py-2 px-6 bg-gray-200 hover:bg-blue-300 text-lg text-gray font-bold rounded-xl transition duration-200 ease-in-out" href="/shopping_cart">Shopping Cart</a>
+
         <a class="inline-block ml-auto mr-3 py-2 px-6 bg-gray-200 hover:bg-blue-300 text-lg text-gray font-bold rounded-xl transition duration-200 ease-in-out" href="/login">Log in</a>
         <a class="inline-block py-2 px-6 bg-blue-300 hover:bg-blue-500 text-lg text-white font-bold rounded-xl  transition duration-200 ease-in-out" href="/signup">Sign up</a>
+
       </div>
 
     </nav>
