--- a/views/index.ejs
+++ b/views/index.ejs
@@ -28,6 +28,18 @@
         fontFamily: {
           sans: ['Inter', 'sans-serif'],
         },
+
+      colors: {
+        transparent: 'transparent',
+        current: 'currentColor',
+        'white': '#ffffff',
+        'fruitBlue': '#d5e3f9',
+        'fruitBlueDark':'#B2D1FF',
+        'fruitYellow':'#FFF48D',
+        'fruitPink': '#DB6868',
+        'fruitPinkDark':'#7E2F2',
+        'fruitBrown': '#613206'
+    },
       }
     }
   }
@@ -130,7 +142,7 @@
                   More Information
                 </button> -->
               </div>
-              <i class="fa-solid fa-circle-info" id="moreInfoBtn" data-bs-toggle="modal" data-bs-target="#exampleModalCenter"></i>
+              <i class="fa-solid fa-circle-info" id="moreInfoBtn" data-bs-toggle="modal" data-bs-target="#exampleModalCenter<%= fruit.id %>"></i>
               <i class="fa-solid fa-heart-circle-plus"></i>
             </div>
             <div class="productImage">
@@ -143,29 +155,35 @@
 
 
 
-            <div class="modal fade fixed top-0 left-0 hidden w-full h-full outline-none overflow-x-hidden overflow-y-auto" id="exampleModalCenter" tabindex="-1" aria-labelledby="exampleModalCenterTitle" aria-modal="true" role="dialog">
+            <div class="modal fade fixed top-0 left-0 hidden w-full h-full outline-none overflow-x-hidden overflow-y-auto" id="exampleModalCenter<%= fruit.id %>" tabindex="-1" aria-labelledby="exampleModalCenterTitle" aria-modal="true" role="dialog">
               <div class="modal-dialog modal-dialog-centered relative w-auto pointer-events-none">
-                <div class="modal-content border-none shadow-lg relative flex flex-col w-full pointer-events-auto bg-white bg-clip-padding rounded-md outline-none text-current">
+                <div class="modal-content border-none shadow-lg relative flex flex-col w-full pointer-events-auto bg-fruitBlue bg-clip-padding rounded-lg outline-none text-current">
                   <div class="modal-header flex flex-shrink-0 items-center justify-between p-4 border-b border-gray-200 rounded-t-md">
                     <h5 class="text-xl font-medium leading-normal text-gray-800" id="exampleModalScrollableLabel">
-                      More Info
+                      <%= fruit.name %> $<%= fruit.price %>
                     </h5>
                     <button type="button"
                       class="btn-close box-content w-4 h-4 p-1 text-black border-none rounded-none opacity-100 focus:shadow-none focus:outline-none focus:opacity-100 hover:text-black hover:opacity-100 hover:no-underline"
-                      data-bs-dismiss="modal" aria-label="Close">&times;</button>
+                      data-bs-dismiss="modal" aria-label="Close">X</button>
                   </div>
+
+                  <img class="mx-5 object-scale-down rounded-lg"src="<%= fruit.fruit_picture_url %>">
+
                   <div class="modal-body relative p-4">
-                    <p>This is a vertically centered modal.</p>
+                    <p><%= fruit.description %></p>
                   </div>
                   <div
                     class="modal-footer flex flex-shrink-0 flex-wrap items-center justify-end p-4 border-t border-gray-200 rounded-b-md">
+                    <a href="/contact">
                     <button type="button"
-                      class="inline-block px-6 py-2.5 bg-purple-600 text-white font-medium text-xs leading-tight uppercase rounded shadow-md hover:bg-purple-700 hover:shadow-lg focus:bg-purple-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-purple-800 active:shadow-lg transition duration-150 ease-in-out"
+                      class="inline-block px-6 py-2.5 bg-fruitYellow text-fruitBrown font-medium text-xs leading-tight uppercase rounded shadow-md hover:bg-fruitPink hover:text-white hover:shadow-lg focus:bg-fruitPink focus:shadow-lg focus:outline-none focus:ring-0 active:bg-fruitPink active:shadow-lg transition duration-150 ease-in-out"
                       data-bs-dismiss="modal">
                       EMAIL SELLER
                     </button>
+                    </a>
+
                     <button type="button"
-                      class="inline-block px-6 py-2.5 bg-blue-600 text-white font-medium text-xs leading-tight uppercase rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out ml-1">
+                      class="inline-block px-6 py-2.5 bg-fruitYellow text-fruitBrown font-medium text-xs leading-tight uppercase rounded shadow-md hover:bg-fruitPink hover:text-white hover:shadow-lg focus:bg-fruitPink focus:shadow-lg focus:outline-none focus:ring-0 active:bg-fruitPinkactive:shadow-lg transition duration-150 ease-in-out ml-1">
                       ADD TO CART
                     </button>
                   </div>
