update login/signup page

--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -115,7 +115,7 @@
               SIGN UP
             </button>
             <p class="text-sm font-semibold mt-2 pt-1 mb-0">
-              Don't have an account?
+              Already have an account?
               <a
                 href="/login"
                 class="text-blue-500 hover:text-blue-700 focus:text-blue-700 transition duration-200 ease-in-out"
