--- a/views/sell.ejs
+++ b/views/sell.ejs
@@ -1,37 +1,55 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html>
 <head>
-  <title>Sell</title>
-
-  <meta charset="UTF-8" >
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" >
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" >
-
-<!-- CSS Frameworks-->
-<link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
+  <title>Fruit Cart</title>
+  <meta charset='utf-8'>
+  <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+  <meta name='viewport' content='width=device-width, initial-scale=1'>
 
 <!-- stylesheets -->
-<link rel='stylesheet' type='text/css' media='screen' href='styles/main.css'>
-<link rel='stylesheet' type='text/css' media='screen' href='styles/index.css'>
-<link rel='stylesheet' type='text/css' media='screen' href='styles/nav.css'>
-<link rel='stylesheet' type='text/css' media='screen' href='styles/sell.css'>
+
+<!-- tailwind elements plugin -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" />
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tw-elements/dist/css/index.min.css" />
+<script src="https://cdn.tailwindcss.com"></script>
+<script>
+  tailwind.config = {
+    theme: {
+      extend: {
+        fontFamily: {
+          sans: ['Inter', 'sans-serif'],
+        },
+      }
+    }
+  }
+</script>
 
 <!-- scripts -->
 <script src="/vendor/jquery-3.0.0.js"></script>
 <!-- Fonts and Icons -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-</head>
 
-<body>
+</head>
+  <body>
   <%- include('partials/_header') %>
 
-  <main>
-    <div class="mainContainer">
-      <h1>Post New Fruits</h1>
-    <div class="w-full max-w-xl newFruitContainer">
-      <form class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4" method="POST" action="/sell">
+  <section class="h-screen">
+  <div class="px-6 h-full text-gray-800">
+    <div
+      class="flex xl:justify-center lg:justify-between justify-center items-center flex-wrap h-full g-6"
+    >
+
+      <div class="xl:ml-20 xl:w-5/12 lg:w-5/12 md:w-8/12 mb-12 md:mb-0">
+        <form method="POST" action="/sell">
+
+
+          <div
+            class="flex items-center my-4 before:flex-1 before:border-t before:border-gray-300 before:mt-0.5 after:flex-1 after:border-t after:border-gray-300 after:mt-0.5"
+          >
+            <p class="text-center font-semibold mx-4 mb-0">NEW FRUIT</p>
+          </div>
 
         <div class="flex flex-wrap -mx-3 mb-6">
           <div class="w-full md:w-1/2 px-3 mb-6 md:mb-0">
@@ -92,11 +110,20 @@
             Submit
           </button>
         </div>
-      </form>
+        </form>
+      </div>
+      <div
+        class="grow-0 shrink-1 md:shrink-0 basis-auto xl:w-6/12 lg:w-6/12 md:w-9/12 mb-12 md:mb-0"
+      >
+        <img
+          src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/draw2.webp"
+          class="w-full"
+          alt="Sample image"
+        />
+      </div>
     </div>
-    </div>
-  </main>
+  </div>
+  </section>
 
-</body>
-
+  </body>
 </html>
