fix database to randomly assign fruit id and current date

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -170,6 +170,7 @@
                   <img class="mx-5 object-scale-down rounded-lg"src="<%= fruit.fruit_picture_url %>">
 
                   <div class="modal-body relative p-4">
+                    <strong>Description:</strong>
                     <p><%= fruit.description %></p>
                   </div>
                   <div
