--- a/views/login.ejs
+++ b/views/login.ejs
@@ -42,7 +42,7 @@
     >
 
       <div class="xl:ml-20 xl:w-5/12 lg:w-5/12 md:w-8/12 mb-12 md:mb-0">
-        <form>
+        <form action="/login" method="POST">
 
 
           <div
