--- a/views/index.ejs
+++ b/views/index.ejs
@@ -145,10 +145,14 @@
               <i class="fa-solid fa-circle-info" id="moreInfoBtn" data-bs-toggle="modal" data-bs-target="#exampleModalCenter<%= fruit.id %>"></i>
               <i class="fa-solid fa-heart-circle-plus"></i>
             </div>
-            <div class="productImage">
-              <img src="https://dodo.ac/np/images/9/92/Fruit_Basket_NH_Icon.png" alt="fruits">
+            <div class="productImage rounded-2xl m-10 overflow-hidden">
+              <img class="h-48 w-full object-cover" src="<%= fruit.fruit_picture_url %>" alt="fruits">
             </div>
-            <strong class="productName text-lg flex justify-start pl-5"><%= fruit.name %> ($<%= fruit.price %>)</strong>
+
+            <div class="flex">
+              <strong class="text-fruitBrown productName text-lg flex pl-5"><%= fruit.name %></strong>
+              <strong class="text-fruitBrown productName text-lg flex pr-5">($<%= fruit.price %>)</strong>
+            </div>
             <button class="addToCart">Add to cart</button>
 
             <!-- More info Popup -->
@@ -159,7 +163,7 @@
               <div class="modal-dialog modal-dialog-centered relative w-auto pointer-events-none">
                 <div class="modal-content border-none shadow-lg relative flex flex-col w-full pointer-events-auto bg-fruitBlue bg-clip-padding rounded-lg outline-none text-current">
                   <div class="modal-header flex flex-shrink-0 items-center justify-between p-4 border-b border-gray-200 rounded-t-md">
-                    <h5 class="text-xl font-medium leading-normal text-gray-800" id="exampleModalScrollableLabel">
+                    <h5 class="text-xl font-medium leading-normal text-fruitBrown" id="exampleModalScrollableLabel">
                       <%= fruit.name %> $<%= fruit.price %>
                     </h5>
                     <button type="button"
@@ -170,21 +174,21 @@
                   <img class="mx-5 object-scale-down rounded-lg"src="<%= fruit.fruit_picture_url %>">
 
                   <div class="modal-body relative p-4">
-                    <strong>Description:</strong>
-                    <p><%= fruit.description %></p>
+                    <strong class="text-fruitBrown">Description:</strong>
+                    <p class="text-fruitBrown"><%= fruit.description %></p>
                   </div>
                   <div
                     class="modal-footer flex flex-shrink-0 flex-wrap items-center justify-end p-4 border-t border-gray-200 rounded-b-md">
                     <a href="/contact">
                     <button type="button"
-                      class="inline-block px-6 py-2.5 bg-fruitYellow text-fruitBrown font-medium text-xs leading-tight uppercase rounded shadow-md hover:bg-fruitPink hover:text-white hover:shadow-lg focus:bg-fruitPink focus:shadow-lg focus:outline-none focus:ring-0 active:bg-fruitPink active:shadow-lg transition duration-150 ease-in-out"
+                      class="inline-block tracking-wider px-6 py-2.5 bg-fruitYellow text-fruitBrown font-extrabold text-sm leading-tight uppercase rounded shadow-md hover:bg-fruitPink hover:text-white hover:shadow-lg focus:bg-fruitPink focus:shadow-lg focus:outline-none focus:ring-0 active:bg-fruitPink active:shadow-lg transition duration-150 ease-in-out"
                       data-bs-dismiss="modal">
                       EMAIL SELLER
                     </button>
                     </a>
 
                     <button type="button"
-                      class="inline-block px-6 py-2.5 bg-fruitYellow text-fruitBrown font-medium text-xs leading-tight uppercase rounded shadow-md hover:bg-fruitPink hover:text-white hover:shadow-lg focus:bg-fruitPink focus:shadow-lg focus:outline-none focus:ring-0 active:bg-fruitPinkactive:shadow-lg transition duration-150 ease-in-out ml-1">
+                      class="inline-block tracking-wider px-6 py-2.5 bg-fruitYellow text-fruitBrown font-extrabold text-sm leading-tight uppercase rounded shadow-md hover:bg-fruitPink hover:text-white hover:shadow-lg focus:bg-fruitPink focus:shadow-lg focus:outline-none focus:ring-0 active:bg-fruitPinkactive:shadow-lg transition duration-150 ease-in-out ml-1">
                       ADD TO CART
                     </button>
                   </div>
