--- a/styles/fruit-info.scss
+++ b/styles/fruit-info.scss
@@ -1,40 +1,40 @@
-.moreInfoPopup{
-  display: none;
-  flex-direction: column;
-  width: 450px;
-  height: 380px;
-  background-color: #d5e3f9;
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%,-50%);
-  padding: 10px;
-  border-radius: 20px;
-}
+// .moreInfoPopup{
+//   display: none;
+//   flex-direction: column;
+//   width: 450px;
+//   height: 380px;
+//   background-color: #d5e3f9;
+//   position: fixed;
+//   top: 50%;
+//   left: 50%;
+//   transform: translate(-50%,-50%);
+//   padding: 10px;
+//   border-radius: 20px;
+// }
 
-.moreInfoPopup img {
-  position: relative;
-  width: 200px;
-}
+// .moreInfoPopup img {
+//   position: relative;
+//   width: 200px;
+// }
 
-#exitPopup {
-  position: relative;
-  width: fit-content;
-  align-self: end;
-}
+// #exitPopup {
+//   position: relative;
+//   width: fit-content;
+//   align-self: end;
+// }
 
-#popupBtns {
-  background-color: #FFF48D;
-  color:#613206;
-  letter-spacing: 1.5px;
-}
+// #popupBtns {
+//   background-color: #FFF48D;
+//   color:#613206;
+//   letter-spacing: 1.5px;
+// }
 
-#popupBtns:hover {
-  background-color:#DB6868;
-  color:white;
-  letter-spacing: 1.5px;
-}
+// #popupBtns:hover {
+//   background-color:#DB6868;
+//   color:white;
+//   letter-spacing: 1.5px;
+// }
 
-#popupText {
-  color:#613206;
-}
+// #popupText {
+//   color:#613206;
+// }
