Fix double sell button error.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -116,16 +116,11 @@
         <button type="submit">Search</button>
       </form>
 
-
-        <a href="/sell">
-        <button class="sellFruit">Sell Fruit</button>
-        </a>
-
-        <select class="dropbtn">
+        <!-- <select class="dropbtn">
           <option selected disabled>Filter</option>
           <option>All Fruit</option>
           <option>My Fruit</option>
-        </select>
+        </select> -->
 
         <% if (user[0].isadmin) { %>
           <a href="/sell">
