Add logout functionality.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -54,6 +54,7 @@
   <main class="">
     <!-- navbar -->
 
+    <%- include('partials/_logout') %>
 
     <!-- banner -->
     <div id="carouselExampleControls" class="carousel slide relative" data-bs-ride="carousel">
