--- a/views/partials/_logout.ejs
+++ b/views/partials/_logout.ejs
@@ -9,8 +9,8 @@
       <div class="login">
         <a class="inline-block ml-auto mr-3 py-2 px-6 bg-gray-200 hover:bg-blue-300 text-lg text-gray font-bold rounded-xl transition duration-200 ease-in-out" href="/favs">My Favs</a>
         <a class="inline-block ml-auto mr-3 py-2 px-6 bg-gray-200 hover:bg-blue-300 text-lg text-gray font-bold rounded-xl transition duration-200 ease-in-out" href="/cart">My Cart</a>
-        <form action="/logout" method="POST">
-          <button type="submit" class="inline-block py-2 px-6 bg-blue-300 hover:bg-blue-500 text-lg text-white font-bold rounded-xl  transition duration-200 ease-in-out">Log out</button>
+        <form action="/logout" method="POST" class="inline-block py-2 px-6 bg-blue-300 hover:bg-blue-500 text-lg text-white font-bold rounded-xl  transition duration-200 ease-in-out">
+          <button type="submit" >Log out</button>
         </form>
       </div>
     </nav>
