Implemented favourite button in popup window

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -135,6 +135,22 @@
                 <img class="h-48 w-full object-cover" src="<%= fruit.fruit_picture_url %>" alt="fruits" >
               </div>
 
+              <!--heart-->
+              <!-- <i class="fa-solid fa-circle-info" id="moreInfoBtn" data-bs-toggle="modal" data-bs-target="#exampleModalCenter"></i> -->
+              <!-- <p class="favourites" data-fruits-id="<%= fruit.id %>"> -->
+              <!-- <i class="fa-solid fa-heart-circle-plus"></i> -->
+              <!-- </p> -->
+              <!-- <form action="/api/users/<%= fruit.id %>/favourite" method="POST"> -->
+                 <!-- <p id="favourite-button" class="list-group-item"><button type="submit">Favourite</button> -->
+                  <!-- <% if (fruit.isfavourite) { %>
+                    <i class="fa-solid fa-heart-circle-minus fav_btn" data-id="minus" data-fruitId="<%= fruit.id %>"></i>
+                  <% } else { %>
+                    <i class="fa-solid fa-heart-circle-plus fav_btn" data-id="plus" data-fruitId="<%= fruit.id %>"></i>
+                  <% } %>
+                 </p> -->
+              <!-- </form> -->
+              <!--heart end-->
+
               <div class="flex justify-between mt-3 mb-2">
                 <strong class="text-fruitBrown productName text-lg flex px-5"><%= fruit.name %></strong>
                 <strong class="text-fruitBrown productName text-lg flex px-5">$<%= fruit.price %></strong>
@@ -169,7 +185,14 @@
                       <strong class="text-fruitBrown">Description:</strong>
                       <p class="text-fruitBrown"><%= fruit.description %></p>
                     </div>
-                    <div class="align-center"><i class="fa-solid fa-heart-circle-plus"></i></div>
+                    <div class="align-center">
+                      <!-- <i class="fa-solid fa-heart-circle-plus"></i> -->
+                      <% if (fruit.isfavourite) { %>
+                        <i class="fa-solid fa-heart-circle-minus fav_btn" data-id="minus" data-fruitId="<%= fruit.id %>"></i>
+                      <% } else { %>
+                        <i class="fa-solid fa-heart-circle-plus fav_btn" data-id="plus" data-fruitId="<%= fruit.id %>"></i>
+                      <% } %>
+                    </div>
                   </div>
                   <div
                     class="modal-footer flex flex-shrink-0 flex-wrap items-center justify-end p-4 border-t border-gray-200 rounded-b-md">
