last day standpoint

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -30,6 +30,17 @@
         fontFamily: {
           sans: ['Inter', 'sans-serif'],
         },
+      colors: {
+        transparent: 'transparent',
+        current: 'currentColor',
+        'white': '#ffffff',
+        'fruitBlue': '#d5e3f9',
+        'fruitBlueDark':'#B2D1FF',
+        'fruitYellow':'#FFF48D',
+        'fruitPink': '#DB6868',
+        'fruitPinkDark':'#7E2F2',
+        'fruitBrown': '#613206'
+    },
       }
     }
   }
