--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -18,8 +18,8 @@
     </div>
     <% } else { %>
     <div class="login">
-        <a class="inline-block ml-auto mr-3 py-2 px-6 bg-gray-200 hover:bg-blue-300 hover:text-white text-lg text-gray font-bold rounded-xl transition duration-200 ease-in-out" href="/favs">My Favs</a>
-        <a class="inline-block ml-auto mr-3 py-2 px-6 bg-gray-200 hover:bg-blue-300 hover:text-white text-lg text-gray font-bold rounded-xl transition duration-200 ease-in-out" href="/cart">My Cart</a>
+        <a class="inline-block ml-auto mr-3 py-2 px-6 bg-gray-200 hover:bg-blue-300 hover:text-white text-lg text-gray font-bold rounded-xl transition duration-200 ease-in-out" href="/favourites">My Favs</a>
+        <a class="inline-block ml-auto mr-3 py-2 px-6 bg-gray-200 hover:bg-blue-300 hover:text-white text-lg text-gray font-bold rounded-xl transition duration-200 ease-in-out" href="/shopping_cart">My Cart</a>
         <form action="/logout" method="POST" class="inline-block py-2 px-6 bg-red-300 hover:bg-red-500 text-lg text-white font-bold rounded-xl  transition duration-200 ease-in-out">
         <button type="submit" class="outline-0">Log out</button>
         </form>
