--- a/views/index.ejs
+++ b/views/index.ejs
@@ -189,9 +189,11 @@
                 <!-- <button id="makeShop" class="addToShopCart" onclick="updateFruitCart(<%= fruit.id %>)">Add cart</button> -->
                 <button class="add_to_cart cart_btn cart_plus" data-id="plus" data-fruitId="<%= fruit.id %>">Add to cart</button>
                 <!-- <i class="fa-solid fa-heart-circle-plus cart_btn" data-id="plus" data-fruitId="<%= fruit.id %>"></i> -->
-              <% } else { %>
+                <% } else { %>
                 <button disabled class="cart_not_working" data-fruitId="<%= fruit.id %>">Sold</button>
               <% } %>
+              <div class="error-massage" id="error">
+              </div>
             <% } %>
 
             <!-- More info Popup -->
