Updated Shopping cart feature

--- a/views/shopping_list.ejs
+++ b/views/shopping_list.ejs
@@ -19,7 +19,7 @@
 
   <!-- scripts -->
   <script src="/vendor/jquery-3.0.0.js"></script>
-
+  <script src="/scripts/app.js"></script>
 </head>
 
 <body>
@@ -45,7 +45,9 @@
               <div class="priceContainer">
                 <p class="price">$<%= fruit.price %></p>
               </div>
-              <button class="removeItem">Remove</button>
+              <!-- <button class="add_to_cart cart_btn cart_plus" data-id="plus" data-fruitId="<%= fruit.id %>">Add to cart</button> -->
+
+              <button class="cart_remove_btn removeItem" data-id="minus" data-fruitId="<%= fruit.id %>">Remove</button>
             </div>
           <% } %>
         </div>
