--- a/views/index.ejs
+++ b/views/index.ejs
@@ -246,7 +246,7 @@
   </main>
 
   <footer>
-    <p>footer</p>
+    <%- include('partials/_footer') %>
   </footer>
 
   <!-- tailwind element plugin -->
