--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -2,12 +2,12 @@
 
 <header>
     <!-- nav bar -->
-<nav class="relative w-full flex flex-wrap items-center justify-between py-2 bg-gray-100 text-gray-500 hover:text-gray-700 focus:text-gray-700 shadow-lg">
-  <div class="container-fluid w-full flex flex-wrap items-center justify-between px-6">
-    <div class="container-fluid">
-      <a class="flex items-center text-gray-900 hover:text-gray-900 focus:text-gray-900 mt-2 lg:mt-0 mr-1" href="#">
-        <img src="../assets/fruitcart-logo.png" class="object-cover h-12 w-12 " alt="" loading="lazy" />
-        <img src="../assets/fruitcart-logo2.png" class="object-cover h-12 w-12 " alt="" loading="lazy" />
+<nav class="relative w-full flex flex-nowrap items-center justify-between py-2 bg-gray-100 text-gray-500 hover:text-gray-700 focus:text-gray-700 shadow-lg">
+  <div class="container-fluid w-full flex flex-nowrap items-center justify-between px-6">
+    <div class="container-fluid px-6">
+      <a class="flex items-center text-gray-900 hover:text-gray-900 focus:text-gray-900 mt-2 lg:mt-0 mr-1" href="/">
+        <img src="../assets/fruitcart-logo1.png" class="object-cover h-12 w-12 " alt="logo" loading="lazy" />
+        <p class="text-3xl font-bold cursor-pointer text-green-700 pl-6"> FRUIT CART</p>
       </a>
     </div>
 
