Updated favourites and shopping cart pages

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -158,3 +158,9 @@
 .removeAll:hover {
   background-color: #7E2F2F;
 }
+
+/* Custom Header */
+.text-header-big{
+  font-size: xx-large!important;
+
+}
