--- a/styles/shopping_list.scss
+++ b/styles/shopping_list.scss
@@ -6,7 +6,6 @@
   justify-content: space-between;
   align-items: center;
 }
-
 .cartHeading {
   color: #000;
 }
@@ -15,7 +14,9 @@
   cursor: pointer;
   border-bottom: 1px solid #E44C4C;
 }
-
+.shoppingCartContainer {
+  padding: 20px 70px;
+}
 .cartItem {
   display: flex;
   justify-content: space-between;
@@ -36,4 +37,15 @@
   letter-spacing: 1.5px;
   text-transform: uppercase;
   transition: .4s ease-in-out;
+}
+.cart-image {
+  float: left;
+  width:  200px!important;
+  height: 100px!important;
+  object-fit: cover!important;
+  border:white;
+  border-width: 5px;
+  border-radius: 20px;
+  padding: 5px;
+
 }
